[package]
name = "leptos-csr-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_log = "1.0"
log = "0.4"
uuid = { version = "1.7", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.91"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", 
    "Window", 
    "Element", 
    "HtmlElement", 
    "Storage", 
    "console", 
    "CssStyleDeclaration",
    "DomTokenList",
    "MouseEvent",
    "Event",
    "EventTarget",
    "MouseEventInit",
    "NodeList"
]}
wasm-bindgen-futures = "0.4.50"
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
once_cell = "1.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

# This is important! It tells wasm-pack to use our custom test harness
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true

# Add metadata to configure wasm-pack tests
[package.metadata.wasm-pack]
test-html = "test-harness.html"

[package.metadata.leptos]
output-name = "leptos_csr_app"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
style-file = "style/main.scss"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "127.0.0.1:3000"
reload-port = 3001
assets-dir = "public"
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
watch-additional-files = []
hash-files = true
lib-profile-release = "release"