[package]
name = "leptos-csr-app"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
aes-gcm = "0.10.3"
base64 = "0.21.4"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" }  # No features needed
leptos_router = { version = "0.7.8" } # No features needed for 0.7.8
log = "0.4"
wasm-logger = "0.2"
uuid = { version = "1.6", features = ["v4", "js"] }
web-sys = { version = "0.3", features = [
    "Blob", 
    "BlobPropertyBag", 
    "Url", 
    "Storage",
    "Window",
    "Document",
    "Element",
    "File",
    "FileList", 
    "FileReader",
    "HtmlInputElement",
    "HtmlElement", 
    "CssStyleDeclaration",
    "console",
    "NodeList",
    "DomTokenList",  # Add this for classList operations
    "HtmlButtonElement",  # Add this for button click testing
    "MouseEvent",  # Add this for click event simulation
]}
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'